--- a/frontend/src/lib/components/copilot/prompts/edit.yaml
+++ b/frontend/src/lib/components/copilot/prompts/edit.yaml
@@ -42,6 +42,7 @@ prompts:
       {resourceTypes}
       </resourceTypes>
       Only define the type for resources that are actually needed to achieve the function purpose. If the type name conflicts with the imported object, rename the imported object NOT THE TYPE.
+      Naming conventions are guidelines, but follow the user's naming choices in the existing code.
       </contextual_information>
       My instructions: {description}
   go:
@@ -148,6 +149,7 @@ prompts:
       {resourceTypes}
       </resourceTypes>
       Only define the type for resources that are actually needed to achieve the function purpose. The resource type name has to be exactly as specified. If the type name conflicts with the imported object, rename the imported object NOT THE TYPE.
+      Naming conventions are guidelines, but follow the user's naming choices in the existing code.
       </contextual_information>
       My instructions: {description}
   bun:
@@ -165,6 +167,7 @@ prompts:
       {resourceTypes}
       </resourceTypes>
       Only define the type for resources that are actually needed to achieve the function purpose. The resource type name has to be exactly as specified. If the type name conflicts with the imported object, rename the imported object NOT THE TYPE.
+      Naming conventions are guidelines, but follow the user's naming choices in the existing code.
       </contextual_information>
       My instructions: {description}
   php:
