--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -720,11 +720,11 @@ jobs:
       - uses: depot/setup-action@v1
 
       - name: Docker meta
-        id: meta-ee-public
+        id: meta-public
         uses: docker/metadata-action@v5
         with:
           images: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-ee-full
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-full
           flavor: |
             latest=false
           tags: |
@@ -738,7 +738,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push publicly ee
+      - name: Build and push publicly 
         uses: depot/build-push-action@v1
         with:
           context: .
@@ -746,9 +746,9 @@ jobs:
           push: true
           file: "./docker/DockerfileRust"
           tags: |
-            ${{ steps.meta-ee-public.outputs.tags }}
+            ${{ steps.meta-public.outputs.tags }}
           labels: |
-            ${{ steps.meta-ee-public.outputs.labels }}
+            ${{ steps.meta-public.outputs.labels }}
 
   build_ee_full:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
