--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -219,7 +219,7 @@ rsmq_async = { version = "5.1.5" }
 gosyn = "0.2.6"
 bytes = "1.4.0"
 gethostname = "0.4.3"
-wasm-bindgen = "0.2.92"
+wasm-bindgen = "=0.2.92"
 serde-wasm-bindgen = "0.6.5"
 wasm-bindgen-test = "0.3.42"
 convert_case = "0.6.0"
