fix lock-write for deno

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -476,7 +476,7 @@ jobs:
           file: "./docker/DockerfileNsjail"
           tags: |
             ${{ steps.meta-ee-public.outputs.tags }}
-            main
+            ghcr.io/windmill-labs/windmill-ee-nsjail:main
           labels: |
             ${{ steps.meta-ee-public.outputs.labels }}
             org.opencontainers.image.licenses=Windmill-Enterprise-License
