--- a/frontend/package.json
+++ b/frontend/package.json
@@ -145,6 +145,7 @@
 		"windmill-parser-wasm-regex": "^1.382.2",
 		"windmill-parser-wasm-rust": "^1.387.0",
 		"windmill-parser-wasm-ts": "^1.382.2",
+		"windmill-parser-wasm-yaml": "^1.396.1",
 		"windmill-sql-datatype-parser-wasm": "^1.318.0",
 		"y-monaco": "^0.1.4",
 		"y-websocket": "^1.5.4",
