--- a/docker/DockerfileSlim
+++ b/docker/DockerfileSlim
@@ -1,6 +1,8 @@
-ARG PYTHON_IMAGE=python:3.11.8-slim-bookworm
+ARG PYTHON_IMAGE=python:3.11.10-slim-bookworm
 
 FROM ${PYTHON_IMAGE}
+
+RUN pip install --upgrade pip==24.2
 
 ARG APP=/usr/src/app
 
