--- a/frontend/package.json
+++ b/frontend/package.json
@@ -177,6 +177,11 @@
 			"svelte": "./package/components/icons/WindmillIcon.svelte",
 			"default": "./package/components/icons/WindmillIcon.svelte"
 		},
+		"./components/icons/WindmillIcon2.svelte": {
+			"types": "./package/components/icons/WindmillIcon2.d.ts",
+			"svelte": "./package/components/icons/WindmillIcon2.svelte",
+			"default": "./package/components/icons/WindmillIcon2.svelte"
+		},
 		"./components/IconedResourceType.svelte": {
 			"types": "./package/components/IconedResourceType.svelte.d.ts",
 			"svelte": "./package/components/IconedResourceType.svelte",
@@ -357,6 +362,9 @@
 			],
 			"components/icons/WindmillIcon.svelte": [
 				"./package/components/icons/WindmillIcon.svelte.d.ts"
+			],
+			"components/icons/WindmillIcon2.svelte": [
+				"./package/components/icons/WindmillIcon2.svelte.d.ts"
 			],
 			"components/scriptEditor/LogPanel.svelte": [
 				"./package/components/scriptEditor/LogPanel.svelte.d.ts"
