--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -7,15 +7,22 @@ on:
     paths:
       - "backend/**"
       - ".github/workflows/build_windows_worker.yml"
-  pull_request:
-    types: [opened, synchronize, reopened]
-    paths:
-      - "backend/**"
-      - ".github/workflows/backend-test.yml"
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  #   paths:
+  #     - "backend/**"
+  #     - ".github/workflows/backend-test.yml"
+
+env:
+  CARGO_INCREMENTAL: 0
+  DATABASE_URL: postgres://postgres:changeme@postgres:5432/windmill
+  DISABLE_EMBEDDING: true
+  RUST_LOG: info
+
 
 jobs:
   cargo_build_windows:
-    runs-on: ubicloud-standard-8
+    runs-on: windows-latest
     container:
       image: ghcr.io/windmill-labs/backend-tests
     services:
@@ -30,19 +37,10 @@ jobs:
           --health-retries 5
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rust-lang/setup-rust-toolchain@v1
-        with:
-          toolchain: 1.80.0
-      # - uses: Swatinem/rust-cache@v2
-      #   with:
-      #     workspaces: |
-      #       backend
-      #       backend -> target
       - name: cargo build windows
         timeout-minutes: 15
-        run:
-          mkdir frontend/build && cd backend && touch
-          windmill-api/openapi-deref.yaml && apt-get install gcc-mingw-w64 python-is-python3 --yes && rustup target add x86_64-pc-windows-gnu && 
-          DATABASE_URL=postgres://postgres:changeme@postgres:5432/windmill OPENSSL_DIR="/usr/lib/ssl" 
-          DISABLE_EMBEDDING=true RUST_LOG=info cargo build --target x86_64-pc-windows-gnu --release
+        run: cargo build --release
+          # mkdir frontend/build && cd backend && touch
+          # windmill-api/openapi-deref.yaml && 
+            
 
