--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -27,5 +27,5 @@ jobs:
       - uses: actions/checkout@v4
       - name: cargo build windows
         timeout-minutes: 15
-        run: mkdir frontend/build && cd backend && type NUL > windmill-api/openapi-deref.yaml && cargo build --release            
+        run: mkdir frontend/build && cd backend && New-Item -Path . -Name "windmill-api/openapi-deref.yaml" -ItemType "File" -Force && cargo build --release
 
