--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -33,7 +33,7 @@ jobs:
           # Initialize PostgreSQL, set the correct paths
           $env:PGROOT = "${Env:ProgramFiles}\PostgreSQL\16\bin"
           $env:PGDATA = "${Env:ProgramFiles}\PostgreSQL\16\data"
-          & $env:PGROOT\pg_ctl.exe initdb -D $env:PGDAT& $env:PGROOT\pg_ctl.exe initdb -D $env:PGDATAA
+          & $env:PGROOT\pg_ctl.exe initdb -D $env:PGDATA
           & $env:PGROOT\pg_ctl.exe start -D $env:PGDATA -l logfile
       - name: cargo build windows
         timeout-minutes: 15
