--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   CARGO_INCREMENTAL: 0
-  DATABASE_URL: postgres://postgres:changeme@postgres:5432/windmill
+  DATABASE_URL: postgres://postgres:changeme@localhost:5432/windmill
   DISABLE_EMBEDDING: true
   RUST_LOG: info
 
