--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   CARGO_INCREMENTAL: 0
-  DATABASE_URL: postgres://postgres:changeme@localhost:5432/windmilpostgres://postgres:changeme@localhost:5432/windmilll
+  SQLX_OFFLINE: true
   DISABLE_EMBEDDING: true
   RUST_LOG: info
 
@@ -25,19 +25,19 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install PostgreSQL using Chocolatey
-        run: |
-          choco install postgresql --params '/Password:changeme' -y --params-global
-      - name: Initialize PostgreSQL
-        run: |
-          # Initialize PostgreSQL, set the correct paths
-          $env:PGROOT = "${Env:ProgramFiles}\PostgreSQL\16\bin"
-          $env:PGDATA = "${Env:ProgramFiles}\PostgreSQL\16\data"
-          # & $env:PGROOT\pg_ctl.exe initdb -D $env:PGDATA
-          # & $env:PGROOT\pg_ctl.exe start -D $env:PGDATA -l logfile
-          $Env:PGPASSWORD='changeme'; '\conninfo' | & $Env:PGROOT/psql.exe -Upostgres
-          curl https://raw.githubusercontent.com/windmill-labs/windmill/main/init-db-as-superuser.sql -o init-db-as-superuser.sql
-          & $env:PGROOT\psql.exe -f .\init-db-as-superuser.sql postgres://postgres:changeme@localhost:5432
+      # - name: Install PostgreSQL using Chocolatey
+      #   run: |
+      #     choco install postgresql --params '/Password:changeme' -y --params-global
+      # - name: Initialize PostgreSQL
+      #   run: |
+      #     # Initialize PostgreSQL, set the correct paths
+      #     $env:PGROOT = "${Env:ProgramFiles}\PostgreSQL\16\bin"
+      #     $env:PGDATA = "${Env:ProgramFiles}\PostgreSQL\16\data"
+      #     # & $env:PGROOT\pg_ctl.exe initdb -D $env:PGDATA
+      #     # & $env:PGROOT\pg_ctl.exe start -D $env:PGDATA -l logfile
+      #     $Env:PGPASSWORD='changeme'; '\conninfo' | & $Env:PGROOT/psql.exe -Upostgres
+      #     curl https://raw.githubusercontent.com/windmill-labs/windmill/main/init-db-as-superuser.sql -o init-db-as-superuser.sql
+      #     & $env:PGROOT\psql.exe -f .\init-db-as-superuser.sql postgres://postgres:changeme@localhost:5432
       - name: cargo build windows
         timeout-minutes: 15
         run: mkdir frontend/build && cd backend && New-Item -Path . -Name "windmill-api/openapi-deref.yaml" -ItemType "File" -Force && cargo build --release
