--- a/docker/DockerfileSlim
+++ b/docker/DockerfileSlim
@@ -17,6 +17,8 @@ ENV TZ=Etc/UTC
 
 RUN /usr/local/bin/python3 -m pip install pip-tools
 
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+
 COPY --from=oven/bun:1.1.27 /usr/local/bin/bun /usr/bin/bun
 
 # add the docker client to call docker from a worker if enabled
