--- a/docker/DockerfileSlimEe
+++ b/docker/DockerfileSlimEe
@@ -16,6 +16,7 @@ RUN apt-get -y update && apt-get install -y curl nodejs awscli
 ENV TZ=Etc/UTC
 
 RUN /usr/local/bin/python3 -m pip install pip-tools
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 
 COPY --from=oven/bun:1.1.27 /usr/local/bin/bun /usr/bin/bun
 
