--- a/backend/windmill-queue/Cargo.toml
+++ b/backend/windmill-queue/Cargo.toml
@@ -43,3 +43,4 @@ bigdecimal.workspace = true
 axum.workspace = true
 serde_urlencoded.workspace = true
 regex.workspace = true
+const_format.workspace = true
