--- a/.github/workflows/build_windows_worker.yml
+++ b/.github/workflows/build_windows_worker.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Rename binary with corresponding architecture
         run: |
-          mv ./backend/target/release/windmill.exe ./backend/target/release/windmill-ee.exe
+          ren ./backend/target/release/windmill.exe ./backend/target/release/windmill-ee.exe
 
       - name: Attach binary to release
         uses: softprops/action-gh-release@v2
