--- a/.github/DockerfileBackendTests
+++ b/.github/DockerfileBackendTests
@@ -43,7 +43,8 @@ RUN wget https://golang.org/dl/go1.21.5.linux-amd64.tar.gz && tar -C /usr/local 
 ENV PATH="${PATH}:/usr/local/go/bin"
 ENV GO_PATH=/usr/local/go/bin/go
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+# Install UV
+RUN curl --proto '=https' --tlsv1.2 -LsSf https://github.com/astral-sh/uv/releases/download/0.4.18/uv-installer.sh | sh
 
 ENV TZ=Etc/UTC
 
