pushing new workflow

--- a/.github/workflows/build-publish-rh-image.yml
+++ b/.github/workflows/build-publish-rh-image.yml
@@ -5,7 +5,9 @@ env:
 name: Build and publish windmill for RHEL9
 on:
   workflow_dispatch:
-
+  push:
+    branches:
+      - alp/rhel-1.407.2
 permissions: write-all
 
 jobs:
